dhall/tests/type-inference/failure/unit/UnionTypeMixedKinds2.txt
Type error: error: InvalidVariantType
 --> <current file>:1:18
  |
1 | < x : Kind | y : Type >
  |                  ^^^^ InvalidVariantType
  |
